Fix links and make links consistent between local and gh-pages

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   practices etc.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://ipv6guide.net" # the base hostname & protocol for your site
+permalink: pretty
 
 # Build settings
 markdown: kramdown
